@@ -111,7 +111,7 @@
 			
 			static inline void LEDs_ToggleLEDs(const uint8_t LEDMask)
 			{
-				PORTB = (PORTB ^ (LEDMask & LEDS_ALL_LEDS));
+				PORTB ^= LEDMask;
 			}
 			
 			static inline uint8_t LEDs_GetLEDs(void) ATTR_WARN_UNUSED_RESULT;
